; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ts/extr_ts_rsp_sign.c_TS_RESP_CTX_set_signer_cert.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ts/extr_ts_rsp_sign.c_TS_RESP_CTX_set_signer_cert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@X509_PURPOSE_TIMESTAMP_SIGN = common dso_local global i32 0, align 4
@TS_F_TS_RESP_CTX_SET_SIGNER_CERT = common dso_local global i32 0, align 4
@TS_R_INVALID_SIGNER_CERTIFICATE_PURPOSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TS_RESP_CTX_set_signer_cert(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = load i32, i32* @X509_PURPOSE_TIMESTAMP_SIGN, align 4
  %8 = call i32 @X509_check_purpose(i32* %6, i32 %7, i32 0)
  %9 = icmp ne i32 %8, 1
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32, i32* @TS_F_TS_RESP_CTX_SET_SIGNER_CERT, align 4
  %12 = load i32, i32* @TS_R_INVALID_SIGNER_CERTIFICATE_PURPOSE, align 4
  %13 = call i32 @TSerr(i32 %11, i32 %12)
  store i32 0, i32* %3, align 4
  br label %26

14:                                               ; preds = %2
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @X509_free(i32* %17)
  %19 = load i32*, i32** %5, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i32* %19, i32** %21, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = call i32 @X509_up_ref(i32* %24)
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %14, %10
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @X509_check_purpose(i32*, i32, i32) #1

declare dso_local i32 @TSerr(i32, i32) #1

declare dso_local i32 @X509_free(i32*) #1

declare dso_local i32 @X509_up_ref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
